changed dockerfile to use eclipse-temurin:23-jdk-alpine